--- a/css/main.css
+++ b/css/main.css
@@ -101,27 +101,6 @@ header p{
     letter-spacing: 1px;
 }
 
-#projects{
-    text-align: center;
-    padding: 10rem 8rem;
-    background: #11998e;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-}
-
-.project-header{
-    max-width: 700px;
-    font-size: 1.9rem;
-    margin: 0 auto 6rem auto;
-    border-bottom: 1px solid white;
-} 
-
-.project-header h3{
-    margin-top: 10px;
-    width: 100%;
-}
-
 .card-body{
      color: black;
  }
@@ -138,11 +117,6 @@ header p{
      width: 100% !important;
 
  }
-  
-.project-title {
-    font-size: 2rem;
-    padding: 2rem 0.5rem;
-  }
 
 #contact{
     display: flex;
@@ -301,3 +275,66 @@ footer{
       display: block;
       text-align: left;
     }
+      
+      #projects{
+    text-align: center;
+    padding: 10rem 8rem;
+    background: #11998e;
+    background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  
+    background: linear-gradient(to right, #38ef7d, #11998e); 
+}
+
+ .project-header{
+    max-width: 700px;
+    font-size: 1.9rem;
+    margin: 0 auto 6rem auto;
+    border-bottom: 1px solid white;
+} 
+
+/* Projects section */
+
+  
+  @media (max-width: 28.75em) {
+    .project-header {
+      font-size: 1.3rem;
+    }
+  }
+  
+  /* "Automagic" image grid using no media queries */
+  .projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 4rem;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    margin-bottom: 6rem;
+  }
+  
+  @media (max-width: 30.625em) {
+    .projects-section {
+      padding: 6rem 1rem;
+    }
+  
+    .projects-grid {
+      grid-template-columns: 1fr;
+    }
+  }
+  
+  .project {
+    background: white;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 2px;
+    color: teal;
+  }
+  
+  .project-image {
+    height: calc(100% - 6.8rem);
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .project-title {
+    font-size: 1.5rem;
+    padding: 2rem 0.5rem;
+  }
