--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -9,38 +12,31 @@ html{
     scroll-behavior: smooth;
 }
 body{
+    line-height: 26px;
     font-family: 'Noto Sans', sans-serif !important;
     color: snow !important;
 }
 
 a{
-    text-decoration: none  !important;
-    color: whitesmoke !important;
+  text-decoration: none !important;
+  color: white !important;
 }
 
-ul{
-    list-style: none;
-    /* display: flex; */
+
+.nav-link{
+  font-size: 1.1rem;
+  margin: 10px;
+  color: #1f1f1f !important;
 }
 
-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex !important;
-    justify-content: space-between !important;
-    padding: 40px 40px 0;
-    color: white;
-}
-
-.nav-list a {
-    margin-right: 3.2rem;
-    padding: 20px;
+.fixed-top{
+  margin-top: 20px;
+  padding: 20px;
 }
 
 .name{
     font-size: 1.5rem;
+    color: black !important;
 }
 
 header p{
@@ -51,68 +47,216 @@ header p{
  margin-right: 10px;
 }
 
-#Home{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    background: #a8c0ff;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #3f2b96, #a8c0ff);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #3f2b96, #a8c0ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-    /* background: #8360c3; 
-    background: -webkit-linear-gradient(to right, #2ebf91, #8360c3);  
-    background: linear-gradient(to right, #2ebf91, #8360c3);  */
-  
+#Home{
+  min-height: 800px;
+  background: #FC5C7D;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #6A82FB, #FC5C7D);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #6A82FB, #FC5C7D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
-#Home h2{
-    margin-top: 20px;
-    font-size: 1.5rem;
+.box_1{
+  bottom: -130px !important;
+  position: relative;
+  min-height: 550px;
+  border-radius: 12px;
+  /* margin-top: 50px; */
+  margin-bottom: 20px;
+  color: #777777;
+  background: #fff;
+  box-shadow: 0px 20px 80px 0px rgba(153, 153, 153, 0.3);
+}
+
+.box_1 img{
+  margin: 30px;
+  padding: 10px;
+  border-radius: 4%;
+}
+
+.personal_text{
+  font-family: 'Roboto', sans-serif;
+}
+
+.personal_text h6{
+  text-transform: uppercase;
+  letter-spacing: 2.1px;
+  font-size: 1.4rem;
+  color: #222222;
+}
+
+.personal_text h3{
+  font-size: 48px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color:  #222222;
+  margin-bottom: 15px;
+  font-weight: bold;
+
+}
+.personal_text h4{
+  font-size: 16px;
+  text-transform: uppercase ;
+  color: #222222;
+  margin-bottom: 20px;
+}
+
+.personal_text h5{
+  font-size: 20px ;
+}
+
+.personal_text ul{
+  margin-top: 20px;
+  list-style: none;
+}
+
+.personal_text li{
+  margin-bottom: 15px;
+}
+
+.personal_text .basic_info li a {
+  position: relative;
+  padding-left: 40px;
+  font-size: 16px;
+  color: #777777 !important;
+}
+
+.personal_text .basic_info li a i {
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  color: #766dff;
+}
+
+.personal_text .personal_social {
+  margin-top: 45px;
+}
+
+.personal_text .personal_social li {
+  display: inline-block;
+  margin-right: 7px;
+}
+
+.personal_text .personal_social li a {
+  line-height: 40px;
+  width: 40px;
+  background: #e8e8e8;
+  border-radius: 5px;
+  display: inline-block;
+  text-align: center;
+  color: #fff;
+  font-size: 16px;
+}
+
+.personal_text .personal_social li a:hover{
+  background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
 }
 
 #About{
-    color: white;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    background-color: #000;
-    background-image: linear-gradient(50deg, #3a3d40 0%, #181719 100%);
+  color: #222222;
+  padding-top: 120px;
+  padding-bottom: 120px;
+  font-family: 'Poppins', sans-serif !important;
 }
 
-#About h1{
-        font-family: 'Montserrat', sans-serif;
-        font-size: 2.5rem;
-        letter-spacing: 2px;
-        text-transform: capitalize;
-        margin-bottom: 10px !important;
+.about-right{
+  margin-left: 0 !important;
 }
 
-#About  h6{
-    font-size: 1.3rem;
-    font-style: italic;
-    font-weight: 200;
-    color: #be3144;
-    letter-spacing: 1px;
+.welcome_text h4{
+  font-weight: bold;
+  font-size: 35px;
+  text-transform: uppercase;
+  margin-bottom: 15px;
 }
 
 
+.welcome_inner{
+  margin-left: 20px !important;
+}
+
+.wel_item{
+  padding: 20px 20px;
+  border: #eeeeee 1px solid;
+}
+
+.wel_item h4{
+  font-size: 19px;
+  text-align: start;
+}
+
+.wel_item p{
+  text-align: start;
+  margin-bottom: 0px;
+}
+
+.tools_expert{
+  width: 70%;
+}
+
+.skill_item h4{
+  font-size: 18px;
+  margin-bottom: 15px;
+  font-weight: normal;
+}
+
+
+.progress_br{
+  border: 1px solid #eeeeee;
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 15px;
+}
+
+
+.progress{
+  height: 10px !important;
+}
+
+.progress-bar{
+  transition: width .6s ease;
+  height: 10px;
+  border-radius: 5px;
+  vertical-align: middle;
+  align-self: center;
+  background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%) !important;
+}
+
+#projects {
+  background: #11998e;
+  background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  
+  background: linear-gradient(to right, #38ef7d, #11998e); 
+}
+
+.card h5{
+  font-weight: 700;
+}
+
+.card{
+  font-family: 'Montserrat', sans-serif !important;
+  border-top-left-radius: 10px !important ;
+  border-top-right-radius: 10px !important;
+  border-bottom-left-radius: 10px !important;
+  border-bottom-right-radius: 10px !important ;
+}
+
+.card img{
+  border-top-left-radius: 10px !important ;
+  border-top-right-radius: 10px !important;
+}
 
 .card-body{
-     color: black;
- }
+  color: black;
+}
 
- .card-img-top{
-     height: 400px;
-     width: 200px;
- }
+.card-img-top{
+  height: 400px;
+  width: 100%;
+}
 
- .mb-4{
+.mb-4{
      padding: 0;
      margin:0;
      min-width: 200px;
@@ -120,24 +264,18 @@ header p{
 
  }
   
-.project-title {
-    font-size: 2rem;
-    padding: 2rem 0.5rem;
-  }
-
 #contact{
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     align-items: center;
-    /* background-color: #303841; */
-    background: #667db6;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-color: #f5f5f5;
+    color: #222222;
     width: 100%;
     height: 91vh;
     padding: 0 2rem;
+    font-family: 'Poppins', sans-serif;
 }
 
 .contact-header h2{
@@ -159,6 +297,14 @@ header p{
     flex-wrap: wrap;
 }
 
+.ins{
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+-webkit-background-clip: text;
+/* Also define standard property for compatibility */
+background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+
 .btn{
     margin-bottom: 30px;
     padding: 1rem 2rem;
@@ -167,9 +313,10 @@ header p{
 }
 
 .cbtn{
+        color: black !important;
         padding: 1rem 2rem;
         font-size: 1.5rem;
-        text-shadow: 2px 2px 1px #1f1f1f;
+        text-shadow: 2px 2px 1px white;
 }
 
 .cbtn:hover{
@@ -187,25 +334,83 @@ footer{
 
 
 @media (max-width: 780px){
+
+    #About{
+      margin-top: 50px;
+      margin-left: 30px;
+    }
+
+    #About h2{
+      margin-top: 10px;
+      text-align: start !important;
+      font-size: 30px !important;
+    }
+
+    .box_1{
+    bottom: -71px !important;
+    border-radius: 0px;
+    }
+
+    nav{
+      background-color: #1f1f1f;
+    }
+
+    .row{
+      margin-right: 0 !important;
+    }
+
+    .nav-link{
+      color: white !important;
+      font-size: 14px;
+    }
+
+    .name{
+      color: white !important;
+    }
+
+    .navbar-toggler{
+      background-color: white !important;
+      margin-right: 10px;
+      font-size: 0.9rem !important;
+    }
+
+    .fixed-top{
+      margin-top: 0px;
+    }
+
+    .tweet{
+      margin-bottom: 40px;
+    }
+   
+    .cbtn{
+      width: 500px;
+    }
+
     header{
         flex-direction: column;
     }
-   h2{
+   
+    h2{
        font-size: 1rem !important;
    }
+   
    h1{
        font-size: 1.9rem !important;
    }
+   
    h3{
        /* width: 100px; */
        font-size: 1.2rem !important;
    }
+   
    #contact{
        height: 100%;
    }
+   
    .contact-header{
        margin-top: 70px;
    }
+   
    .contact-links{
        margin-top: 10px;
    }
@@ -228,122 +433,4 @@ footer{
     }
     }
 
-/* Add a black background color to the top navigation */
-.topnav {
-    /* background-color: #333; */
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
- 
-  
-  /* Add an active class to highlight the current page */
-  .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-  }
-  
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
-    display: none;
-  }
-
-  /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-    /* .topnav{
-        background-color: black;
-    } */
-  }
-  
-  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-}
-
-#projects{
-    text-align: center;
-    padding: 10rem 8rem;
-    background: #11998e;
-    background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  
-    background: linear-gradient(to right, #38ef7d, #11998e); 
-}
-
- .project-header{
-    max-width: 700px;
-    font-size: 1.9rem;
-    margin: 0 auto 6rem auto;
-    border-bottom: 1px solid white;
-} 
-
-/* Projects section */
-
-  
-  @media (max-width: 28.75em) {
-    .project-header {
-      font-size: 1.3rem;
-    }
-  }
-  
-  /* "Automagic" image grid using no media queries */
-  .projects-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-gap: 4rem;
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
-    margin-bottom: 6rem;
-  }
-  
-  @media (max-width: 30.625em) {
-    .projects-section {
-      padding: 6rem 1rem;
-    }
-  
-    .projects-grid {
-      grid-template-columns: 1fr;
-    }
-  }
-  
-  .project {
-    background: white;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    border-radius: 2px;
-    color: teal;
-  }
-  
-  .project-image {
-    height: calc(100% - 6.8rem);
-    width: 100%;
-    object-fit: cover;
-  }
-  
-  .project-title {
-    font-size: 1.5rem;
-    padding: 2rem 0.5rem;
-  }
+    
