--- a/css/main.css
+++ b/css/main.css
@@ -272,7 +272,7 @@ header p{
     background-color: #f5f5f5;
     color: #222222;
     width: 100%;
-    height: 91vh;
+    height: 100vh;
     padding: 0 2rem;
     font-family: 'Poppins', sans-serif;
 }
@@ -280,6 +280,7 @@ header p{
 .contact-header h2{
     font-size: 3rem;
     margin-bottom: 10px;
+    margin-top: 60px;
 }
 
 #contact p{
@@ -313,13 +314,38 @@ background-clip: text;
 
 .cbtn{
         color: black !important;
-        padding: 1rem 2rem;
-        font-size: 1.5rem;
-        text-shadow: 2px 2px 1px white;
+        padding: 1rem;
+        font-size: 1.6rem;
 }
 
 .cbtn:hover{
     opacity: 0.7;
+}
+
+.cform{
+  display: flex;
+  flex-direction: column;
+}
+
+.cform label{
+  display: flex;
+  justify-content: start;
+  margin-top: 5px;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.cform input,textarea{
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  border: white;
+}
+
+.cform textarea{
+  height: 100px !important;
+  width: 350px !important;
+  resize: none;
+  margin-bottom: 20px;
 }
 
 footer{
@@ -333,11 +359,10 @@ footer{
 
 
 @media (max-width: 780px){
-    
-    .personal_text h5{
+  .personal_text h5{
     font-size: 12px ;
   }
-    
+
     #About{
       margin-top: 50px;
       margin-left: 30px;
@@ -384,10 +409,6 @@ footer{
     .tweet{
       margin-bottom: 40px;
     }
-   
-    .cbtn{
-      width: 500px;
-    }
 
     header{
         flex-direction: column;
@@ -416,6 +437,10 @@ footer{
    
    .contact-links{
        margin-top: 10px;
+   }
+
+   .or{
+     font-size: 2rem !important;
    }
     
     footer{
